@@ -13,6 +13,10 @@ glibc (2.3.2-1) unstable; urgency=low
     - debian/patches/0list: Add hurd-enable-ldconfig
     - debian/sysdeps/paths.mk: Comply with FHS, use $(prefix)/lib, not
       $(prefix)/libexec
+    - debian/rules: Introduce "perfect_make_check_archs" concept - 
+      arch's listed in this variable must pass make check cleanly, 
+      or the build will fail.  Start off with i386, powerpc, sparc, alpha
+      and s390.
 
   * GOTO Masanori <gotom@debian.or.jp>
     - Updated glibc 2.3.2.
